# Commander

./: CMakeLists.txt  CommanderConfig.cmake.in  README.md
cmake/: CommanderHelpers.cmake  FindQt5.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
src/: CMakeLists.txt  CommanderAndroidMacros.cmake  CommanderAndroidSupport.cmake  CommanderMacros.cmake  CommanderPlatformSupport.cmake  CommanderWasmMacros.cmake  CommanderWasmSupport.cmake  translations.cmake
src/kernel/: CMakeLists.txt  config.h  config.h.in  debug.cpp  debug.h  global.h
test/: CMakeLists.txt
